<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turn_offset_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hir-yk@users.noreply.github.com">autoware</maintainer>
  <license>Apache License 2.0</license>

  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>tier4_planning_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
