<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turn_offset_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hir-yk@users.noreply.github.com">autoware</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>autoware_auto_vehicle_msgs</build_depend>
  <build_depend>tier4_planning_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>autoware_auto_vehicle_msgs</exec_depend>
  <exec_depend>tier4_planning_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
